plugins {
    id 'java'
}

group 'com.scloud.microservices'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.10
targetCompatibility = 1.10

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.6.RELEASE'
    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.4'
    compile group: 'com.google.guava', name: 'guava', version: '19.0'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
    compile group: 'org.springframework.data', name: 'spring-data-redis', version: '2.1.0.RELEASE'
    compile group: 'redis.clients', name: 'jedis', version: '2.9.0'
    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.0.6.RELEASE'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
